# cgal-pybind

./: .gitignore  .gitlab-ci.yml  .gitreview  CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish-sdist-wheels.yml
cgal_pybind/: __init__.py  version.py
ci/: python_build_sdist.sh
examples/: Examples.ipynb
src/: cgal_bind.cpp  polyhedron.cpp  slice_volume.cpp  streamlines_intersections.cpp  surface_mesh.cpp  utils.cpp  utils.hpp
src/cgal_pybind/: __init__.py
tests/: capsule.stl  diagonal_grid_layers.eps  test_contract.py  test_polyhedron.py  test_slice_volume.py  test_streamlines_intersections.py  test_surface_mesh.py  test_thickness_estimates.py
